# Raytracer

./: CMakeLists.txt  MatrixLibrary.c  light.txt  main.c  matrixlib.c  model.txt  tasks.txt
